--- a/Desafio/style.css
+++ b/Desafio/style.css
@@ -1,3 +1,28 @@
-body {
-	background-color: #F0F8FF
+.div_master {
+	display: flex;
+	flex-direction: row;
+	min-width: 900px;
+	min-height: 600px;
+	width: 100%;
+	height: 100%;
+}
+
+.div_esq {
+	background-color: aquamarine;
+	width: 70%;
+}
+
+.div_dir {
+	background-color: darkcyan;
+	width: 30%;
+}
+
+.escreva {
+	width: 90%;
+	margin-top: 8%;
+	margin-left: 5%;
+	height: 50%;
+	font-size: x-large;
+	font-family:'Times New Roman', Times, serif;
+	background-color: transparent;
 }
