--- a/Desafio/style.css
+++ b/Desafio/style.css
@@ -1,28 +1,156 @@
-.div_master {
+html, body {
+	height:100%;
+	width: 100%;
+	background-color:lavender;
+}
+
+.div_main {
 	display: flex;
 	flex-direction: row;
 	min-width: 900px;
 	min-height: 600px;
 	width: 100%;
-	height: 100%;
+	height: 96%;
 }
 
 .div_esq {
-	background-color: aquamarine;
 	width: 70%;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+}
+
+.div_esq > * {
+	align-self: center;
 }
 
 .div_dir {
-	background-color: darkcyan;
 	width: 30%;
+	display: flex;
+	flex-direction: column;
+	background-color:lavenderblush;
+	align-items: flex-start;
 }
 
+.div_dir * {
+	align-self: center;
+}
+
+footer {
+	display: flex;
+	flex-direction: row;
+	background-color: lightgray;
+	height: 4%;
+	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+}
+
+.logo {
+	position: absolute;
+	margin-top: 25px;
+	margin-left: 40px;
+	
+}
+.titulo {
+	position: absolute;
+	margin-top: 25px;
+	text-align: center;
+	font-size: xx-large;
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+	width: 100%;
+	color:blueviolet;
+}
 .escreva {
-	width: 90%;
-	margin-top: 8%;
-	margin-left: 5%;
+	width: 65%;
+	margin-top: 100px;
 	height: 50%;
+	border-radius: 8px;
 	font-size: x-large;
 	font-family:'Times New Roman', Times, serif;
 	background-color: transparent;
+	resize: none;
+	padding: 10px;	
+}
+ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 60px;
+    width: 100%;	
+}
+
+ul li {
+	display: inline;
+}
+
+.imagem {
+	position: absolute;
+	margin-top: 10px;
+	height: 15px;
+}
+
+.inline_imagem {
+	height: 12px;
+	width: 12px;
+	margin-right: 5px;
+}
+
+.aviso {
+	font-family: 'Arial Narrow', sans-serif;
+	font-weight: bold;
+	margin-top: 10px;
+	height: 20px;
+	margin-bottom: 15px
+}
+
+button {
+	cursor: pointer;
+}
+
+.botao_crip {
+	width: 140px;
+	height: 40px;
+	border-radius: 5px;
+	background-color:thistle;
+	font-family:'Arial Narrow', sans-serif;
+}
+
+.botao_descrip {
+	width: 140px;
+	height: 40px;
+	border-radius: 5px;
+	background-color:thistle;
+	font-family:'Arial Narrow', sans-serif;
+}
+
+.saida { 
+	width: 65%;
+	margin-top: 100px;
+	height: 50%;
+	border-radius: 8px;
+	border: solid;
+	border-width: 1px;
+	font-size: x-large;
+	font-family:'Times New Roman', Times, serif;
+	background-color: transparent;
+	resize: none;
+	padding: 10px;
+	background-image: url("Vector3.png");
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.botao_copiar {
+	width: 140px;
+	height: 40px;
+	border-radius: 5px;
+	background-color: thistle;
+	font-family:'Arial Narrow', sans-serif;
+	margin-top: 45px;
+}
+
+.copyright {
+	margin-top:auto;
+	text-align: center;
+	width: 100%;
 }
